--- a/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
@@ -4465,7 +4465,7 @@ msgctxt "game_options"
 msgid "Native (400x240)"
 msgstr ""
 
-#. TRANSLATION: citra, dolphin, duckstation, pcsx2, sonic2013, ...
+#. TRANSLATION: citra, dolphin, duckstation, pcsx2, rpcs3, ...
 msgctxt "game_options"
 msgid "VSYNC"
 msgstr "VSYNC"
@@ -5552,30 +5552,104 @@ msgstr "DEKODER SPU"
 
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
-msgid "If game crashes, try ASMJIT. If still crashing, try Interpreter (fast)."
+msgid "If game crashes, try ASMJIT. If still crashing, try Fast Interpreter."
 msgstr ""
-"Jeśli gra się zawiesi, spróbuj ASMJIT. Jeśli nadal się zawiesza, spróbuj "
-"Interpretera (szybkiego)."
 
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
-msgid "Recompiler (LLVM)"
-msgstr "Rekompilator (LLVM)"
+msgid "LLVM Recompiler"
+msgstr ""
 
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
-msgid "Recompiler (ASMJIT)"
-msgstr "Rekompilator (ASMJIT)"
+msgid "ASMJIT Recompiler"
+msgstr ""
 
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
-msgid "Interpreter (fast)"
-msgstr "Interpreter (szybki)"
+msgid "Fast Interpreter"
+msgstr ""
 
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
-msgid "Interpreter (precise)"
-msgstr "Interpreter (dokładny)"
+msgid "Precise Interpreter"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "TV MODE"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "PS3's internal ratio setting. Some games only support 16/9."
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "ADDITIONAL FRAMELIMIT"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Most games already have an internal framelimit. Minor performance cost."
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Off (faster, unstable)"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "SHADER MODE"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Only Async (skip draw) avoids freezing while compiling shaders."
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Legacy (laggy)"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Async (skip draw, recommended)"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Async with interp. (hybrid)"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Interpreter only (experimental)"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid ""
+"Can fix screen tearing on unorthodox displays (most LCDs don't need this)."
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "On (slower)"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "STRETCH TO DISPLAY AREA"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Distorts the output to fill the display fully."
+msgstr ""
 
 #. TRANSLATION: easyrpg
 msgctxt "game_options"
@@ -6653,6 +6727,29 @@ msgstr ""
 msgctxt "game_options"
 msgid "Set vsync on to avoid tearing."
 msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid ""
+#~ "If game crashes, try ASMJIT. If still crashing, try Interpreter (fast)."
+#~ msgstr ""
+#~ "Jeśli gra się zawiesi, spróbuj ASMJIT. Jeśli nadal się zawiesza, spróbuj "
+#~ "Interpretera (szybkiego)."
+
+#~ msgctxt "game_options"
+#~ msgid "Recompiler (LLVM)"
+#~ msgstr "Rekompilator (LLVM)"
+
+#~ msgctxt "game_options"
+#~ msgid "Recompiler (ASMJIT)"
+#~ msgstr "Rekompilator (ASMJIT)"
+
+#~ msgctxt "game_options"
+#~ msgid "Interpreter (fast)"
+#~ msgstr "Interpreter (szybki)"
+
+#~ msgctxt "game_options"
+#~ msgid "Interpreter (precise)"
+#~ msgstr "Interpreter (dokładny)"
 
 #~ msgctxt "game_options"
 #~ msgid "Mac 128k (2 LD Floppies)"
