--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -2593,7 +2593,7 @@ msgctxt "game_options"
 msgid "N64 3-point"
 msgstr "N64 3-punt"
 
-#. TRANSLATION: libretro/parallel_n64
+#. TRANSLATION: libretro/parallel_n64, libretro
 msgctxt "game_options"
 msgid "FRAMERATE"
 msgstr "FRAMERATE"
@@ -4306,6 +4306,21 @@ msgstr "CONTROLLER NAAR LIGHTGUN"
 msgctxt "game_options"
 msgid "Map controller inputs to lightgun inputs"
 msgstr "Map controller invoer naar lightgun invoer"
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "FRAMECOUNT"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frame counter."
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frames per second."
+msgstr ""
 
 #. TRANSLATION: amiberry
 msgctxt "game_options"
