--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -2574,7 +2574,7 @@ msgctxt "game_options"
 msgid "N64 3-point"
 msgstr ""
 
-#. TRANSLATION: libretro/parallel_n64
+#. TRANSLATION: libretro/parallel_n64, libretro
 msgctxt "game_options"
 msgid "FRAMERATE"
 msgstr ""
@@ -4275,6 +4275,21 @@ msgstr ""
 #. TRANSLATION: libretro
 msgctxt "game_options"
 msgid "Map controller inputs to lightgun inputs"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "FRAMECOUNT"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frame counter."
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frames per second."
 msgstr ""
 
 #. TRANSLATION: amiberry
