--- a/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
@@ -2608,7 +2608,7 @@ msgctxt "game_options"
 msgid "N64 3-point"
 msgstr ""
 
-#. TRANSLATION: libretro/parallel_n64
+#. TRANSLATION: libretro/parallel_n64, libretro
 msgctxt "game_options"
 msgid "FRAMERATE"
 msgstr "TASA DE REFRESCO"
@@ -4322,6 +4322,21 @@ msgstr "MANDO A PISTOLA"
 msgctxt "game_options"
 msgid "Map controller inputs to lightgun inputs"
 msgstr "Asigna los controles del mando a la pistola (lightgun)"
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "FRAMECOUNT"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frame counter."
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frames per second."
+msgstr ""
 
 #. TRANSLATION: amiberry
 msgctxt "game_options"
