--- a/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
@@ -2599,7 +2599,7 @@ msgctxt "game_options"
 msgid "N64 3-point"
 msgstr "N64 3-point"
 
-#. TRANSLATION: libretro/parallel_n64
+#. TRANSLATION: libretro/parallel_n64, libretro
 msgctxt "game_options"
 msgid "FRAMERATE"
 msgstr "ЧАСТОТА КАДРОВ"
@@ -4315,6 +4315,21 @@ msgstr ""
 #. TRANSLATION: libretro
 msgctxt "game_options"
 msgid "Map controller inputs to lightgun inputs"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "FRAMECOUNT"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frame counter."
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
+msgid "Display the current frames per second."
 msgstr ""
 
 #. TRANSLATION: amiberry
