enable PulseAudio in Retroarch

--- a/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
@@ -4231,6 +4231,11 @@ msgstr ""
 
 #. TRANSLATION: libretro
 msgctxt "game_options"
+msgid "PulseAudio"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
 msgid "SDL2"
 msgstr ""
 
