--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -4229,6 +4229,11 @@ msgstr ""
 
 #. TRANSLATION: libretro
 msgctxt "game_options"
+msgid "PulseAudio"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
 msgid "SDL2"
 msgstr ""
 
