--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -4259,6 +4259,11 @@ msgstr ""
 
 #. TRANSLATION: libretro
 msgctxt "game_options"
+msgid "PulseAudio"
+msgstr ""
+
+#. TRANSLATION: libretro
+msgctxt "game_options"
 msgid "SDL2"
 msgstr ""
 
