Inspired by wizzomafizzo gpicase commit, limit cpu cores to 2 + audio profile

--- a/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
@@ -4238,6 +4238,11 @@ msgctxt "game_options"
 msgid "GLCore"
 msgstr "GLCore"
 
+#. TRANSLATION: libretro, libretro
+msgctxt "game_options"
+msgid "SDL2"
+msgstr ""
+
 #. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
 msgctxt "game_options"
 msgid "Vulkan"
@@ -4276,11 +4281,6 @@ msgstr ""
 #. TRANSLATION: libretro
 msgctxt "game_options"
 msgid "PulseAudio"
-msgstr ""
-
-#. TRANSLATION: libretro
-msgctxt "game_options"
-msgid "SDL2"
 msgstr ""
 
 #. TRANSLATION: libretro
