--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -4192,6 +4192,11 @@ msgctxt "game_options"
 msgid "GLCore"
 msgstr ""
 
+#. TRANSLATION: libretro, libretro
+msgctxt "game_options"
+msgid "SDL2"
+msgstr ""
+
 #. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
 msgctxt "game_options"
 msgid "Vulkan"
@@ -4230,11 +4235,6 @@ msgstr ""
 #. TRANSLATION: libretro
 msgctxt "game_options"
 msgid "PulseAudio"
-msgstr ""
-
-#. TRANSLATION: libretro
-msgctxt "game_options"
-msgid "SDL2"
 msgstr ""
 
 #. TRANSLATION: libretro
