--- a/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
@@ -4230,6 +4230,11 @@ msgctxt "game_options"
 msgid "GLCore"
 msgstr "GLCore"
 
+#. TRANSLATION: libretro, libretro
+msgctxt "game_options"
+msgid "SDL2"
+msgstr ""
+
 #. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
 msgctxt "game_options"
 msgid "Vulkan"
@@ -4268,11 +4273,6 @@ msgstr ""
 #. TRANSLATION: libretro
 msgctxt "game_options"
 msgid "PulseAudio"
-msgstr ""
-
-#. TRANSLATION: libretro
-msgctxt "game_options"
-msgid "SDL2"
 msgstr ""
 
 #. TRANSLATION: libretro
