--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -4204,13 +4204,11 @@ msgctxt "game_options"
 msgid "GRAPHICS API"
 msgstr "GRAPHICS API"
 
-#. TRANSLATION: libretro, cemu, dolphin, duckstation, pcsx2, ...
+#. TRANSLATION: libretro
 msgctxt "game_options"
 msgid ""
-"Choose which graphics API library to use. Vulkan is better, when supported."
+"Choose which graphics API library to use. Vulkan may not work for every core."
 msgstr ""
-"Kies welke graphics API library te gebruiken. Vulkan is beter, wanneer "
-"ondersteund."
 
 #. TRANSLATION: libretro, cemu, daphne, dolphin, duckstation, ...
 msgctxt "game_options"
@@ -4425,6 +4423,14 @@ msgid ""
 msgstr ""
 "Verbeterd zowel sprite schalen als road renderen. Heeft geen invloed op de "
 "auto sprite."
+
+#. TRANSLATION: cemu, dolphin, duckstation, pcsx2, ppsspp, ...
+msgctxt "game_options"
+msgid ""
+"Choose which graphics API library to use. Vulkan is better, when supported."
+msgstr ""
+"Kies welke graphics API library te gebruiken. Vulkan is beter, wanneer "
+"ondersteund."
 
 #. TRANSLATION: cemu
 msgctxt "game_options"
